--- a/templates/allauth/socialaccount/connections.html
+++ b/templates/allauth/socialaccount/connections.html
@@ -32,7 +32,7 @@
         {% endfor %}
 
         <div>
-            <button type="submit">{% trans 'Remove' %}</button>
+            <button type="submit" class="btn btn-dark rounded-0">{% trans 'Remove' %}</button>
         </div>
 
     </fieldset>
