--- a/templates/allauth/socialaccount/snippets/provider_list.html
+++ b/templates/allauth/socialaccount/snippets/provider_list.html
@@ -1,20 +1,21 @@
 {% load socialaccount %}
 
 {% get_providers as socialaccount_providers %}
+<div class="row d-flex justify-content-between">
+    {% for provider in socialaccount_providers %}
+    {% if provider.id == "openid" %}
+    {% for brand in provider.get_brands %}
 
-{% for provider in socialaccount_providers %}
-{% if provider.id == "openid" %}
-{% for brand in provider.get_brands %}
-<li>
-  <a title="{{brand.name}}" 
-     class="socialaccount_provider {{provider.id}} {{brand.id}}" 
-     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
-     >{{brand.name}}</a>
-</li>
-{% endfor %}
-{% endif %}
-<li>
-  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
-</li>
-{% endfor %}
+    <div class="col-auto">
+        <a title="{{brand.name}}"
+           class="socialaccount_provider {{provider.id}} {{brand.id}}"
+           href="{% provider_login_url provider.id openid=brand.openid_url process=process %}">{{brand.name}}</a>
+    </div>
+    {% endfor %}
+    {% endif %}
+    <div class="col-auto">
+        <a title="{{provider.name}}" class="btn btn-secondary rounded-0 socialaccount_provider {{provider.id}}"
+           href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
+    </div>
+    {% endfor %}
+</div>
