Setup for translations

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -27,7 +27,8 @@
                 Grupo Pierola Romania
             </h1>
             <p class="lead">
-                Desavarsire in fiecare strop
+                {% trans "Desavarsire in fiecare strop"%}
+                
             </p>   
         </div>
     </div>
