--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -25,13 +26,26 @@
         <nav class="navbar navbar-expand-lg d-none d-lg-block p-0">
             <div class="container-fluid">
                 <a class="navbar-brand text-dark pt-3 brand" href="{% url 'home' %}">Grupo Pierola Romania</a>
+                <form action="{% url 'set_language' %}" method="post" id="language-selector">
+                    {% csrf_token %}
+                    <select name="language" id="language-selector">
+                        {% get_current_language as LANGUAGE_CODE %}
+                        {% get_available_languages as LANGUAGES %}
+                        {% get_language_info_list for LANGUAGES as languages %}
+                        {% for language in languages %}
+                        <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                            {{ language.code }}
+                        </option>
+                        {% endfor %}
+                    </select>
+                </form>
                 <ul class="navbar-nav font-header">
                     <li class="nav-item dropdown mx-4">
                         <a class="nav-link text-light dropdown bg-danger" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <div class="text-center">
                                 <div>
                                     <i class="fas fa-user fa-lg"></i>
-                                    <span>My Account</span>
+                                    <span>{% trans "Contul Meu" %}</span>
                                 </div>
                             </div>
                         </a>
@@ -42,13 +56,13 @@
                                 <a href="{% url 'admin:index' %}" class="dropdown-item wine-color">Product Management</a>
                             </li>
                             {% endif %}
-                            <li><a href="{% url 'profile_view' %}" class="dropdown-item wine-color">My Profile</a></li>
+                            <li><a href="{% url 'profile_view' %}" class="dropdown-item wine-color">{% trans "Profil" %} </a></li>
                             <li>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item wine-color">Logout</a>
                             </li>
                             {% else %}
                             <li>
-                                <a href="{% url 'account_signup' %}" class="dropdown-item wine-color">Register</a>
+                                <a href="{% url 'account_signup' %}" class="dropdown-item wine-color">{% trans "Inregistreaza-te" %}</a>
                             </li>
                             <li>
                                 <a href="{% url 'account_login' %}" class="dropdown-item wine-color">Login</a>
@@ -81,19 +95,20 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown text-danger" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fas fa-wine-glass-alt"></i>
-                                <span>Vinuri</span>
+                                <span>{% trans "Vinuri" %}</span>
                             </a>
                             <ul class="dropdown-menu text-center border-0 wines-dropdown" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item wine-color" href="{% url 'wines_view' %}">Toate</a></li>
+                                <li><a class="dropdown-item wine-color" href="{% url 'wines_view' %}">{% trans "Toate" %} </a></li>
                                 {% for color in colors %}
-                                <li><a class="dropdown-item wine-color" href="{% url 'wines_view'%}?color={{color}}">{{color}}</a></li>
+                                <li><a class="dropdown-item wine-color" href="{% url 'wines_view'%}?color={{color}}">{% trans "{{color}}" %}</a></li>
                                 {% endfor %}
                             </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-danger" href="{% url 'offers' %}">
                                 <i class="fas fa-gifts"></i>
-                                Oferte si Promotii
+                                {% trans "Oferte si Promotii" %}
+
                             </a>
                         </li>
                         <li class="nav-item">
@@ -111,7 +126,7 @@
                         <li class="nav-item my-auto">
                             <form method="GET" action="{% url 'wines_view' %}">
                                 <div class="input-group input-group-sm">
-                                    <input type="text" name="q" class="form-control text-danger rounded-0 border-start-0 border-end-0    border-top-0" placeholder="Cauta un vin">
+                                    <input type="text" name="q" class="form-control text-danger rounded-0 border-start-0 border-end-0    border-top-0" placeholder="{% trans 'Cauta un vin' %}">
                                     <button type="submit" class="btn btn-small text-light bg-danger"><i class="fas fa-search"></i></button>
                                 </div>
                             </form>
@@ -150,9 +165,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 <script type="text/javascript">
+        document.getElementById('language-selector').addEventListener('change', (e) => {
+        console.log('working good');
+        document.getElementById('language-selector').submit()
+    })
+
     const toastLive = document.querySelector('.toast');
     const toast = new bootstrap.Toast(toastLive);
-    toast.show()
+    toast.show();
+
 </script>
 
 {% block postload_js %}
